# simple_snowflake_mcp

./: .env.example  .gitignore  Makefile  README.md  config.yaml  future_todo.md  launch_mcp.sh  pyproject.toml  requirements.txt
src/simple_snowflake_mcp/: __init__.py  __main__.py  server.py
