[project]
name = "simple-snowflake-mcp"
version = "0.3.1"
description = "Snowflake MCP Server — WSL/externalbrowser auth, read-only by default"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hilton Day" }
]
license = { file = "LICENSE" }
keywords = ["snowflake", "mcp", "server"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp>=1.10.1",
    "snowflake-connector-python>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
simple-snowflake-mcp = "simple_snowflake_mcp:run"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
